# monolith/src/routes/path-defs.ts
@@ -1,3 +1,4 @@
 export const PATH_SIGNUP = "/auth/signup"   
 export const PATH_VERIFY = "/auth/verify"   
+export const PATH_LOGIN = "/auth/login"   
 export const PATH_OK = "/ok"
